BRR:initialize setup

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/public/css/general.css">
-    <link rel="stylesheet" href="/public/css/home.css">
+    <link rel="stylesheet" href="public/css/general.css">
+    <link rel="stylesheet" href="public/css/home.css">
 </head>
 <body>
     <div class="navbar_frame">
         <div class="container">
             <div class="navbar_top">
                 <a href="">
-                    <img src="/public/images/icons/logo.png" alt="">
+                    <img src="public/images/icons/logo.png" alt="">
                 </a>
                 <div class="nav_search_frame">
                     <div class="search_box">
@@ -28,14 +28,14 @@
                         <input type="search" placeholder="Search Products...">
                     </div>
                     <div class="search_icon_box">
-                        <img src="/public/images/icons/search products icon 1.svg" alt="">
+                        <img src="public/images/icons/search products icon 1.svg" alt="">
                     </div>
                 </div>
                     <div class="nav_top_menu">
                         <a href="">
                             <div class="top_menu_box">
                                 <div class="box_icon_box">
-                                    <img src="/public/images/icons/heart 1.svg" alt="">
+                                    <img src="public/images/icons/heart 1.svg" alt="">
                                 </div>
                                 <div class="box_info_box">
                                     <span>Wishlist</span>
@@ -46,7 +46,7 @@
                         <a href="">
                             <div class="top_menu_box">
                                 <div class="box_icon_box">
-                                    <img src="/public/images/icons/profile 1.svg" alt="">
+                                    <img src="public/images/icons/profile 1.svg" alt="">
                                 </div>
                                 <div class="box_info_box">
                                     <span>Sign In</span>
@@ -58,7 +58,7 @@
                             <div class="top_menu_box">
                                 <div class="box_icon_box">
                                     <div class="basket_count">2</div>
-                                    <img src="/public/images/icons/shopping-cart 1.svg" alt="">
+                                    <img src="public/images/icons/shopping-cart 1.svg" alt="">
                                 </div>
                                 <div class="box_info_box">
                                     <span>$200</span>
@@ -72,7 +72,7 @@
             <div class="navbar_bott">
                 <div class="navbar_bott_menu_box">
                     <div class="browse_box">
-                        <img src="/public/images/icons/browse.svg" alt="">
+                        <img src="public/images/icons/browse.svg" alt="">
                         <span>Browse categories</span>
                     </div>
                     <div class="navbar_route_menu">
@@ -111,7 +111,7 @@
                         <span>Immersive Entertainment</span>
                         <p>Discover our new items. Up to 25% Off !</p>
                         <a href="">Shop Now</a>
-                        <img src="/public/images/icons/header background.png" alt="">
+                        <img src="public/images/icons/header background.png" alt="">
                     </div>
                 </div>
                 <div class="header_right">
@@ -123,7 +123,7 @@
                             <div class="hover_border"></div>
                         </div>
                         <div class="box_right">
-                            <img src="/public/images/icons/image 6.png" alt="">
+                            <img src="public/images/icons/image 6.png" alt="">
                         </div>
                     </div>
                     <div class="header_box_bottom">
@@ -134,7 +134,7 @@
                             <div class="hover_border"></div>
                         </div>
                         <div class="box_right">
-                            <img src="/public/images/icons/image 11.png" alt="">
+                            <img src="public/images/icons/image 11.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                 <div class="service_box_one">
                     <div class="box_left">
                         <div class="box_icon">
-                            <img src="/public/images/icons/fast-delivery 1.svg" alt="">
+                            <img src="public/images/icons/fast-delivery 1.svg" alt="">
                         </div>
                     </div>
                     <div class="box_right">
@@ -156,7 +156,7 @@
                 <div class="service_box_two">
                     <div class="box_left">
                         <div class="box_icon">
-                            <img src="/public/images/icons/shield 1.svg" alt="">
+                            <img src="public/images/icons/shield 1.svg" alt="">
                         </div>
                     </div>
                     <div class="box_right">
@@ -167,7 +167,7 @@
                 <div class="service_box_three">
                     <div class="box_left">
                         <div class="box_icon">
-                            <img src="/public/images/icons/headphones 1.svg" alt="">
+                            <img src="public/images/icons/headphones 1.svg" alt="">
                         </div>
                     </div>
                     <div class="box_right">
@@ -178,7 +178,7 @@
                 <div class="service_box_four">
                     <div class="box_left">
                         <div class="box_icon">
-                            <img src="/public/images/icons/credit-card 1.svg" alt="">
+                            <img src="public/images/icons/credit-card 1.svg" alt="">
                         </div>
                     </div>
                     <div class="box_right">
@@ -188,6 +188,17 @@
                 </div>
             </div>
         </div>  
-    </div>      
+    </div>    
+    <div class="shopping_category">
+        <div class="container">
+            <div class="category_title_box">
+                <span>Shop by Category</span>
+                <a href="">View All Categories</a>
+                <div class="hover_border"></div>
+            </div>
+            <div class="category_img_box">
+
+        </div>
+    </div>  
 </body>
 </html>
