--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="public/css/general.css">
     <link rel="stylesheet" href="public/css/home.css">
 </head>
@@ -271,24 +274,24 @@
                                 <span>3,014 reviews</span>
                             </div>
                             <div class="price_box">
-                                <strong>$32</strong>
-                                <span>$45</span>
+                                <strong>$445</strong>
+                                <span>$25</span>
                             </div>
                         </div>
                     </div>
                     <div class="product_box">
                         <a href="">
-                            <div class="product_img_box" style="background: url('public/images/products/apple\ watch\ se.png'); background-size: cover;">
+                            <div class="product_img_box" style="background: url('public/images/products/iphone\ 11.png'); background-size: cover;">
                             <div class="hover_box">
                                 <button>Add to Cart</button>
                             </div>
                             </div>
                         </a>
                         <div class="product_content_box">
-                            <span class="product_title">Samsung</span>
+                            <span class="product_title">Apple</span>
                             <a href="">
                                 <p class="product_desc">
-                                    Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
+                                    Apple iPhone 11 64GB Smartphone - Black.
                                 </p>
                             </a>
                             <div class="review_box">
@@ -297,28 +300,27 @@
                                 <img src="public/images/icons/review.svg" alt="">
                                 <img src="public/images/icons/review.svg" alt="">
                                 <img src="public/images/icons/review.svg" alt="">
-                                <span>3,014 reviews</span>
+                                <span>8,450 reviews</span>
                             </div>
                             <div class="price_box">
-                                <strong>$32</strong>
-                                <span>$45</span>
+                                <strong>$850</strong>
+                                <span>$35</span>
                             </div>
                         </div>
                     </div>
                     <div class="product_box">
                         <a href="">
-                            <div class="product_img_box" style="background: url('public/images/products/apple\ watch\ se.png'); background-size: cover;">
+                            <div class="product_img_box" style="background: url('public/images/products/iRobot\ Roomba\ i3.png'); background-size: cover;">
                             <div class="hover_box">
                                 <button>Add to Cart</button>
                             </div>
                             </div>
                         </a>
                         <div class="product_content_box">
-                            <span class="product_title">Samsung</span>
+                            <span class="product_title">Sony</span>
                             <a href="">
                                 <p class="product_desc">
-                                    Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
-                                </p>
+                                    iRobot Roomba i3+ EVO Wi-Fi Connected Self-Empty Robot.                                </p>
                             </a>
                             <div class="review_box">
                                 <img src="public/images/icons/review.svg" alt="">
@@ -326,28 +328,27 @@
                                 <img src="public/images/icons/review.svg" alt="">
                                 <img src="public/images/icons/review.svg" alt="">
                                 <img src="public/images/icons/review.svg" alt="">
-                                <span>3,014 reviews</span>
+                                <span>4,843 reviews</span>
                             </div>
                             <div class="price_box">
-                                <strong>$32</strong>
-                                <span>$45</span>
+                                <strong>$1350</strong>
+                                <span>$55</span>
                             </div>
                         </div>
                     </div>
                     <div class="product_box">
                         <a href="">
-                            <div class="product_img_box" style="background: url('public/images/products/apple\ watch\ se.png'); background-size: cover;">
+                            <div class="product_img_box" style="background: url('public/images/products/dyson\ v7.png'); background-size: cover;">
                             <div class="hover_box">
                                 <button>Add to Cart</button>
                             </div>
                             </div>
                         </a>
                         <div class="product_content_box">
-                            <span class="product_title">Samsung</span>
+                            <span class="product_title">Dyson</span>
                             <a href="">
                                 <p class="product_desc">
-                                    Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
-                                </p>
+                                    Dyson V7 Complete Cordless Stick Vacuum - Iron/Blue                                </p>
                             </a>
                             <div class="review_box">
                                 <img src="public/images/icons/review.svg" alt="">
@@ -355,11 +356,11 @@
                                 <img src="public/images/icons/review.svg" alt="">
                                 <img src="public/images/icons/review.svg" alt="">
                                 <img src="public/images/icons/review.svg" alt="">
-                                <span>3,014 reviews</span>
+                                <span>12,977 reviews</span>
                             </div>
                             <div class="price_box">
-                                <strong>$32</strong>
-                                <span>$45</span>
+                                <strong>$569</strong>
+                                <span>$39</span>
                             </div>
                         </div>
                     </div>
@@ -368,7 +369,36 @@
                     <img src="public/images/icons/next 2.svg" alt="">
                 </div>
             </div>
-            <div class="product_pagination_box"></div>
+            <!-- <div class="product_pagination_box">
+                <div class="container">
+                    <div class="page_arrow_left_box">
+                        <img src="public/images/icons/arrow-left.svg" alt="">
+                    </div>
+                    <div class="page_bullet_box">
+                        <img src="public/images/icons/bullets.svg" alt="">
+                    </div>
+                    <div class="page_arrow_right_box">
+                        <img src="public/images/icons/arrow-right.svg" alt="">
+                    </div>
+                </div>
+            </div> -->
+            <div aria-label="page_navigation_example">
+                <ul class="pagination">
+                  <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Previous">
+                      <span aria-hidden="true">«</span>
+                    </a>
+                  </li>
+                  <li class="page-item"><a class="page-link" href="#">1</a></li>
+                  <li class="page-item"><a class="page-link" href="#">2</a></li>
+                  <li class="page-item"><a class="page-link" href="#">3</a></li>
+                  <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Next">
+                      <span aria-hidden="true">»</span>
+                    </a>
+                  </li>
+                </ul>
+            </div>
         </div>
     </div>
 
