--- a/index.html
+++ b/index.html
@@ -238,7 +238,6 @@
             </div>
         </div>
     </div>  
-
     <div class="selling_product_frame">
         <div class="container">
             <div class="category_top">
@@ -401,6 +400,12 @@
             </div>
         </div>
     </div>
+    <div class="page_space_page">
+        <div class="page_box">
+            <span>Members get free shipping* with no order minimum!*Restrictions apply.Try free 30-day trial</span>
+        </div>
+    </div>
+
 
 </body>
 </html>
