--- a/index.html
+++ b/index.html
@@ -368,6 +368,7 @@
                     <img src="public/images/icons/next 2.svg" alt="">
                 </div>
             </div>
+            <!-- product_pagination_box style 1 -->
             <!-- <div class="product_pagination_box">
                 <div class="container">
                     <div class="page_arrow_left_box">
@@ -381,7 +382,9 @@
                     </div>
                 </div>
             </div> -->
-            <div aria-label="page_navigation_example">
+
+            <!-- product_pagination_box style 2 bootstrap -->
+            <!-- <div aria-label="page_navigation_example">
                 <ul class="pagination">
                   <li class="page-item">
                     <a class="page-link" href="#" aria-label="Previous">
@@ -397,6 +400,40 @@
                     </a>
                   </li>
                 </ul>
+            </div> -->
+
+            <!-- product_pagination_box style 3 -->
+            <div class="pagination_box">
+                <div class="pagination_main">
+                    <img src="public/images/icons/arrow-left.svg" alt="">
+                    <div class="pagination_dot">
+                        <div class="dot">
+                            <div></div>
+                        </div>
+                        <div class="dot">
+                            <div></div>
+                        </div>
+                        <div class="dot active">
+                            <div></div>
+                        </div>
+                        <div class="dot">
+                            <div></div>
+                        </div>
+                        <div class="dot">
+                            <div></div>
+                        </div>
+                        <div class="dot">
+                            <div></div>
+                        </div>
+                        <div class="dot">
+                            <div></div>
+                        </div>
+                        <div class="dot">
+                            <div></div>
+                        </div>
+                    </div>
+                    <img src="public/images/icons/arrow-left.svg" alt=""  style="transform: scaleX(-1);">
+                </div>
             </div>
         </div>
     </div>
