--- a/index.html
+++ b/index.html
@@ -439,6 +439,56 @@
         <div class="adv_frame">
             Members get free shipping* with no order minimum!*Restrictions apply.Try free 30-day trial
         </div>
+        <div class="spec_product_frame">
+            <div class="container">
+                <div class="category_top">
+                    <span>headphones</span>
+                    <a href="">View All</a>
+                </div>
+                <div class="spec_product_wrapper">
+                    <div class="big_product_box">
+                        <div class="big_product_content">
+                            <span>Now in moon gray</span>
+                            <p>Beats
+                                Studio Buds</p>
+                            <a href="">Shop Now</a>
+                            <div class="hover_border"></div>
+                        </div>
+                        <img src="public/images/products/headphone_big.png" alt="">
+                    </div>
+                    <div class="small_product_wrapper">
+                        <div class="small_product_box">
+                            <div class="small_product_content">
+                                <strong>Over-Ear</strong>
+                                <span>29 items</span>
+                            </div>
+                            <img src="public/images/products/sony_headphone.png" alt="">
+                        </div>
+                        <div class="small_product_box">
+                            <div class="small_product_content">
+                                <strong>On-Ear</strong>
+                                <span>29 items</span>
+                            </div>
+                            <img src="public/images/products/big_beats.png" alt="">
+                        </div>
+                        <div class="small_product_box">
+                            <div class="small_product_content">
+                                <strong>Sports & Fitness</strong>
+                                <span>29 items</span>
+                            </div>
+                            <img src="public/images/products/image 97.png" alt="" style="margin-top: 40px;">
+                        </div>
+                        <div class="small_product_box">
+                            <div class="small_product_content">
+                                <strong>Bluetooth Headphones</strong>
+                                <span>29 items</span>
+                            </div>
+                            <img src="public/images/products/small_beats.png" alt="" style="margin-top: 40px;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>    
 </body>
 </html>
