fix: refactor spec product section view

--- a/index.html
+++ b/index.html
@@ -476,14 +476,14 @@
                                 <strong>Sports & Fitness</strong>
                                 <span>29 items</span>
                             </div>
-                            <img src="public/images/products/image 97.png" alt="" style="margin-top: 40px;">
+                            <img src="public/images/products/image 97.png" alt="">
                         </div>
                         <div class="small_product_box">
                             <div class="small_product_content">
                                 <strong>Bluetooth Headphones</strong>
                                 <span>29 items</span>
                             </div>
-                            <img src="public/images/products/small_beats.png" alt="" style="margin-top: 40px;">
+                            <img src="public/images/products/small_beats.png" alt="">
                         </div>
                     </div>
                 </div>
