--- a/index.html
+++ b/index.html
@@ -489,6 +489,189 @@
                 </div>
             </div>
         </div>
+
+        <div class="tv_frame">
+            <div class="container">
+                <div class="category_top">
+                    <span>TV & Home Theatre</span>
+                    <div>
+                        <a href="">Televisions</a>
+                        <a href="">Digital Cable</a>
+                        <a href="">Media Streamers</a>
+                        <a href="">Remote Controls</a>
+                    </div>
+                </div>
+                <div class="tv_wrapper">
+                    <div class="next_prev_box">
+                        <img src="public/images/icons/next 1.svg" alt="">
+                    </div>
+                    <div class="tv_product_boxes">
+                        <div class="tv_product_box">
+                            <div class="product_img">
+                                <a href="">
+                                    <img src="public/images/products/samsung 58  4k.png" alt="">
+                                </a>
+                            </div>
+                            <div class="product_content_box">
+                                <span class="product_title">Dyson</span>
+                                <a href="">
+                                    <p class="product_desc">
+                                        Dyson V7 Complete Cordless Stick Vacuum - Iron/Blue                                </p>
+                                </a>
+                                <div class="review_box">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <span>12,977 reviews</span>
+                                </div>
+                                <div class="price_box">
+                                    <strong>$569</strong>
+                                    <span>$39</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tv_product_box">
+                            <div class="product_img">
+                                <a href="">
+                                    <img src="public/images/products/TCL 3-Series 40.png" alt="">
+                                </a>
+                            </div>
+                            <div class="product_content_box">
+                                <span class="product_title">TCL</span>
+                                <a href="">
+                                    <p class="product_desc">
+                                        TCL 3-Series 40" 1080p HD LED Android Smart TV (40S334-CA)                                </a>
+                                <div class="review_box">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <span>2,350 reviews</span>
+                                </div>
+                                <div class="price_box">
+                                    <strong>$430</strong>
+                                    <span>$29</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tv_product_box">
+                            <div class="product_img">
+                                <a href="">
+                                    <img src="public/images/products/LG 65 4k.png" alt="">
+                                </a>
+                            </div>
+                            <div class="product_content_box">
+                                <span class="product_title">LG</span>
+                                <a href="">
+                                    <p class="product_desc">
+                                        LG 65" 4K UHD HDR LED webOS Smart TV                                </a>
+                                <div class="review_box">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <span>15,290 reviews</span>
+                                </div>
+                                <div class="price_box">
+                                    <strong>$1250</strong>
+                                    <span>$49</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tv_product_box">
+                            <div class="product_img">
+                                <a href="">
+                                    <img src="public/images/products/LG 55.png" alt="">
+                                </a>
+                            </div>
+                            <div class="product_content_box">
+                                <span class="product_title">LG</span>
+                                <a href="">
+                                    <p class="product_desc">
+                                        LG 55" 4K UHD HDR OLED webOS Smart TV                                 </a>
+                                <div class="review_box">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <span>13,642 reviews</span>
+                                </div>
+                                <div class="price_box">
+                                    <strong>$1155</strong>
+                                    <span>$45</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tv_product_box">
+                            <div class="product_img">
+                                <a href="">
+                                    <img src="public/images/products/Sony X85j.png" alt="">
+                                </a>
+                            </div>
+                            <div class="product_content_box">
+                                <span class="product_title">SONY</span>
+                                <a href="">
+                                    <p class="product_desc">
+                                        Sony X85J 65" 4K UHD HDR LED Smart Google TV (KD65X85J)                                </a>
+                                <div class="review_box">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <span>11,357 reviews</span>
+                                </div>
+                                <div class="price_box">
+                                    <strong>$1095</strong>
+                                    <span>$25</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="next_prev_box">
+                        <img src="public/images/icons/next 2.svg" alt="">
+                    </div>
+                </div>
+                <div class="pagination_box">
+                    <div class="pagination_main">
+                        <img src="public/images/icons/arrow-left.svg" alt="">
+                        <div class="pagination_dot">
+                            <div class="dot">
+                                <div></div>
+                            </div>
+                            <div class="dot">
+                                <div></div>
+                            </div>
+                            <div class="dot active">
+                                <div></div>
+                            </div>
+                            <div class="dot">
+                                <div></div>
+                            </div>
+                            <div class="dot">
+                                <div></div>
+                            </div>
+                            <div class="dot">
+                                <div></div>
+                            </div>
+                            <div class="dot">
+                                <div></div>
+                            </div>
+                            <div class="dot">
+                                <div></div>
+                            </div>
+                        </div>
+                        <img src="public/images/icons/arrow-left.svg" alt=""  style="transform: scaleX(-1);">
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>    
 </body>
 </html>
