feat: completed brand section view

--- a/product/all.html
+++ b/product/all.html
@@ -214,8 +214,73 @@
           </div>
         </div>
       </div>
-
-      
+      <div class="shop_category_frame">
+        <div class="container">
+          <div class="category_top">
+            <span>Shop by Category</span>
+            <a href="./all.html">View All Categories</a>
+          </div>
+          <div class="category_wrapper">
+            <div class="category_box">
+              <div class="category_img_box">
+                <img src="../public/images/category/tv.png" alt="" />
+              </div>
+              <span>TVs, Home Theatre, and Accessories</span>
+            </div>
+            <div class="category_box">
+              <div class="category_img_box">
+                <img src="../public/images/category/computer.png" alt="" />
+              </div>
+              <span>Computers, Tablets, and Accessories</span>
+            </div>
+            <div class="category_box">
+              <div class="category_img_box">
+                <img src="../public/images/category/smart.png" alt="" />
+              </div>
+              <span>Smart Home</span>
+            </div>
+            <div class="category_box">
+              <div class="category_img_box">
+                <img src="../public/images/category/headphone.png" alt="" />
+              </div>
+              <span>Headphones and Portable Speakers</span>
+            </div>
+            <div class="category_box">
+              <div class="category_img_box">
+                <img src="../public/images/category/phone.png" alt="" />
+              </div>
+              <span>Cell Phones and Accessories</span>
+            </div>
+            <div class="category_box">
+              <div class="category_img_box">
+                <img src="../public/images/category/game.png" alt="" />
+              </div>
+              <span>Video Games, Consoles, and Accessories</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="shop_brand_frame">
+        <div class="container">
+          <div class="shop_brand_top">
+            <span>Shop by brand</span>
+          </div>
+          <div class="shop_brand_bottom">
+            <div class="brand_route_menu">
+              <a href="./choosenProduct.html">
+                <button type="button" class="btn btn-outline-primary" style="margin-right: 20px; width: 108px;">Apple</button>
+                <button type="button" class="btn btn-outline-primary" style="margin-right: 20px; width: 108px;">Dell</button>
+                <button type="button" class="btn btn-outline-primary" style="margin-right: 20px; width: 108px;">Hp</button>
+                <button type="button" class="btn btn-outline-primary" style="margin-right: 20px; width: 108px;">Lenovo</button>
+                <button type="button" class="btn btn-outline-primary" style="margin-right: 20px; width: 108px;">Samsung</button>
+                <button type="button" class="btn btn-outline-primary" style="margin-right: 20px; width: 108px;">Asus</button>
+                <button type="button" class="btn btn-outline-primary" style="margin-right: 20px; width: 108px;">Acer</button>
+                <button type="button" class="btn btn-outline-primary" style="margin-right: 20px; width: 108px;">Sony</button>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
 
     </div>
 
@@ -317,5 +382,6 @@
         </div>
       </div>
     </div>
+    
   </body>
 </html>
