feat:completed checkout page view

--- a/order/cart.html
+++ b/order/cart.html
@@ -137,20 +137,15 @@
             <span class="drop">/</span>
             <span class="active">Desktop Computers</span>
       </div>
-      <div class="shopping_cart_frame">
-            <div class="container">
-                <div class="cart_title">
-                    <strong>Shopping Cart</strong>
-                </div>
-                <div class="free_bar_box">
-                    <span>Buy $98.00 more to enjoy FREE Shipping</span>
-                    <div class="bar_image_box">
-                        <img src="../public/images/icons/bar star1.svg" alt="">
-                    </div>
-                </div>
-            </div>
+      <div class="title_div">
+        <span>shopping cart</span>
+        <p>Buy $98.00 more to enjoy FREE Shipping</p>
+        <div class="process_bar">
+          <div></div>
+          <img src="../public/images/icons/bar star1.svg" alt="">
+        </div>
       </div>
-      <div class="cart_content_box">
+      <div class="shop_cart_frame">
         <div class="container">
           <div class="content_box_left">
             <div class="table_box">
@@ -164,7 +159,7 @@
                             </div>
               </div>
               <div class="box_bott">
-                            <div class="cart_product_box">
+                <div class="cart_product_box">
                                 <img src="../public/images/products/Apple MacBook Pro 16 2021  1TB.png" alt="">
                                 <div class="info_box">
                                     <span>Apple MacBook Pro with Apple M1 Chip</span>
@@ -185,8 +180,8 @@
                                 <div class="remove_box">
                                     <img src="../public/images/icons/close 1.svg" alt="">
                                 </div>
-                            </div>
-                            <div class="cart_product_box">
+                </div>
+                <div class="cart_product_box">
                                 <img src="../public/images/products/Apple MacBook Pro 16 2021  1TB.png" alt="">
                                 <div class="info_box">
                                     <span>Apple MacBook Pro with Apple M1 Chip</span>
@@ -207,8 +202,8 @@
                                 <div class="remove_box">
                                     <img src="../public/images/icons/close 1.svg" alt="">
                                 </div>
-                            </div>
-                            <div class="cart_product_box">
+                </div>
+                <div class="cart_product_box">
                                 <img src="../public/images/products/Apple MacBook Pro 16 2021  1TB.png" alt="">
                                 <div class="info_box">
                                     <span>Apple MacBook Pro with Apple M1 Chip</span>
@@ -229,8 +224,7 @@
                                 <div class="remove_box">
                                     <img src="../public/images/icons/close 1.svg" alt="">
                                 </div>
-                            </div>
-                            
+                </div>
               </div>
               <div class="box_bottom_bott">
                 <div class="box_left">
