feat:completed cart page view

--- a/order/cart.html
+++ b/order/cart.html
@@ -282,7 +282,7 @@
               </div>
             </div>
             <div class="checkout_box">
-              <a href="">
+              <a href="checkout.html">
                 <button>Proceed to checkout</button>
               </a>
             </div>
