--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <img src="public/images/icons/browse.svg" alt="" />
               <span>Browse categories</span>
             </div>
-            <div class="navbar_route_menu">
+            <div class="navbar_route_menu_home">
               <div class="router_menu">
                 <a href="/index.html" class="active">Home</a>
               </div>
