--- a/product/all.html
+++ b/product/all.html
@@ -19,6 +19,7 @@
       rel="stylesheet"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../public/css/general.css" />
     <link rel="stylesheet" href="../public/css/product_all.css" />
@@ -90,21 +91,61 @@
               <img src="../public/images/icons/browse.svg" alt="" />
               <span>Browse categories</span>
             </div>
-            <div class="navbar_route_menu">
-              <div class="router_menu">
-                <a href="../index.html" >Home</a>
+            <div class="navbar_route_menu_others">
+              <div class="router_menu_others">
+                <button class="btn btn-secondary dropdown-toggle" style="background: #443297; border: none;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Home
+                </button>
+                <ul class="dropdown-menu dropdown-menu-dark" style="background: #443297; ">
+                  <li><a class="dropdown-item" href="../index.html" >Home</a></li>
+                  <li><a class="dropdown-item" href="#" >Another action</a></li>
+                  <li><a class="dropdown-item" href="#" >Something else here</a></li>
+                  <li><a class="dropdown-item" href="#" >Separated link</a></li>
+                </ul>
               </div>
-              <div class="router_menu">
-                <a href="./all.html" class="active">Shop</a>
+              <div class="router_menu_others">
+                <button class="btn btn-secondary dropdown-toggle" style="background: #443297; border: none;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Shop
+                </button>
+                <ul class="dropdown-menu dropdown-menu-dark" style="background: #443297; ">
+                  <li><a class="dropdown-item" href="#" >All Electronics  </a></li>
+                  <li><a class="dropdown-item" href="#" >Smart TV </a></li>
+                  <li><a class="dropdown-item" href="#" >Laptops</a></li>
+                  <li><a class="dropdown-item" href="#" >Cell Phones </a></li>
+                  <li><a class="dropdown-item" href="#" >Camera & Photo</a></li>
+                  <li><a class="dropdown-item" href="#" >Portable Audio</a></li>
+                  <li><a class="dropdown-item" href="#" >Computers</a></li>
+                  <li><a class="dropdown-item" href="#" >iPad & Tablets</a></li>
+                  <li><a class="dropdown-item" href="#" >Pc Gaming</a></li>
+                  <li><a class="dropdown-item" href="#" >Smart Home</a></li>
+                  <li><a class="dropdown-item" href="#" >Headphones</a></li>
+                </ul>
               </div>
-              <div class="router_menu">
-                <a href="../order/cart.html">Orders</a>
+              <div class="router_menu_others">
+                <button class="btn btn-secondary dropdown-toggle" style="background: #443297; border: none;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Pages
+                </button>
+                <ul class="dropdown-menu dropdown-menu-dark" style="background: #443297; ">
+                  <li><a class="dropdown-item" href="../mypage/index.html" >My Page</a></li>
+                  <li><a class="dropdown-item" href="#" >Product</a></li>
+                  <li><a class="dropdown-item" href="#" >Order
+                      <li><a class="dropdown-item" href="../order/cart.html">Cart</a></li>
+                      <li><a class="dropdown-item" href="../order/checkout.html" >Checkout</a></li>
+                      <li><a class="dropdown-item" href="../order/received.html" >Received</a></li>
+                  </a></li>
+                  <li><a class="dropdown-item" href="#" >Other</a></li>
+                </ul>
               </div>
-              <div class="router_menu">
-                <a href="../other/about.html">About</a>
-              </div>
-              <div class="router_menu">
-                <a href="../other/contact.html">Contact</a>
+              <div class="router_menu_others">
+                <button class="btn btn-secondary dropdown-toggle" style="background: #443297; border: none;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Blog
+                </button>
+                <ul class="dropdown-menu dropdown-menu-dark" style="background: #443297; ">
+                  <li><a class="dropdown-item" href="#" >Action</a></li>
+                  <li><a class="dropdown-item" href="#" >Another action</a></li>
+                  <li><a class="dropdown-item" href="#" >Something else here</a></li>
+                  <li><a class="dropdown-item" href="#" >Separated link</a></li>
+                </ul>
               </div>
             </div>
             <div class="sorting_menu">
