fix: completed navbar section view

--- a/mypage/index.html
+++ b/mypage/index.html
@@ -99,7 +99,7 @@
               <img src="../public/images/icons/browse.svg" alt="" />
               <span>Browse categories</span>
             </div>
-            <div class="navbar_route_menu">
+            <!-- <div class="navbar_route_menu">
               <div class="router_menu">
                 <a href="../index.html">Home</a>
               </div>
@@ -114,6 +114,63 @@
               </div>
               <div class="router_menu">
                 <a href="../other/contact.html">Contact</a>
+              </div>
+            </div> -->
+            <div class="navbar_route_menu_others">
+              <div class="router_menu_others">
+                <button class="btn btn-secondary dropdown-toggle" style="background: #443297; border: none;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Home
+                </button>
+                <ul class="dropdown-menu dropdown-menu-dark" style="background: #443297; ">
+                  <li><a class="dropdown-item" href="../index.html" >Home</a></li>
+                  <li><a class="dropdown-item" href="#" >Another action</a></li>
+                  <li><a class="dropdown-item" href="#" >Something else here</a></li>
+                  <li><a class="dropdown-item" href="#" >Separated link</a></li>
+                </ul>
+              </div>
+              <div class="router_menu_others">
+                <button class="btn btn-secondary dropdown-toggle" style="background: #443297; border: none;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Shop
+                </button>
+                <ul class="dropdown-menu dropdown-menu-dark" style="background: #443297; ">
+                  <li><a class="dropdown-item" href="#" >All Electronics  </a></li>
+                  <li><a class="dropdown-item" href="#" >Smart TV </a></li>
+                  <li><a class="dropdown-item" href="#" >Laptops</a></li>
+                  <li><a class="dropdown-item" href="#" >Cell Phones </a></li>
+                  <li><a class="dropdown-item" href="#" >Camera & Photo</a></li>
+                  <li><a class="dropdown-item" href="#" >Portable Audio</a></li>
+                  <li><a class="dropdown-item" href="#" >Computers</a></li>
+                  <li><a class="dropdown-item" href="#" >iPad & Tablets</a></li>
+                  <li><a class="dropdown-item" href="#" >Pc Gaming</a></li>
+                  <li><a class="dropdown-item" href="#" >Smart Home</a></li>
+                  <li><a class="dropdown-item" href="#" >Headphones</a></li>
+                </ul>
+              </div>
+              <div class="router_menu_others">
+                <button class="btn btn-secondary dropdown-toggle" style="background: #443297; border: none;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Pages
+                </button>
+                <ul class="dropdown-menu dropdown-menu-dark" style="background: #443297; ">
+                  <li><a class="dropdown-item" href="../mypage/index.html" >My Page</a></li>
+                  <li><a class="dropdown-item" href="../product/all.html" >Product</a></li>
+                  <li><a class="dropdown-item" href="#" >Order
+                      <li><a class="dropdown-item" href="../order/cart.html">Cart</a></li>
+                      <li><a class="dropdown-item" href="../order/checkout.html" >Checkout</a></li>
+                      <li><a class="dropdown-item" href="../order/received.html" >Received</a></li>
+                  </a></li>
+                  <li><a class="dropdown-item" href="#" >Other</a></li>
+                </ul>
+              </div>
+              <div class="router_menu_others">
+                <button class="btn btn-secondary dropdown-toggle" style="background: #443297; border: none;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Blog
+                </button>
+                <ul class="dropdown-menu dropdown-menu-dark" style="background: #443297; ">
+                  <li><a class="dropdown-item" href="#" >Action</a></li>
+                  <li><a class="dropdown-item" href="#" >Another action</a></li>
+                  <li><a class="dropdown-item" href="#" >Something else here</a></li>
+                  <li><a class="dropdown-item" href="#" >Separated link</a></li>
+                </ul>
               </div>
             </div>
             <div class="sorting_menu">
