--- a/order/checkout.html
+++ b/order/checkout.html
@@ -152,8 +152,12 @@
                 </button>
                 <ul class="dropdown-menu dropdown-menu-dark" style="background: #443297; ">
                   <li><a class="dropdown-item" href="../mypage/index.html" >My Page</a></li>
-                  <li><a class="dropdown-item" href="#" >Product</a></li>
-                  <li><a class="dropdown-item" href="#" >Order</a></li>
+                  <li><a class="dropdown-item" href="../product/all.html" >Product</a></li>
+                  <li><a class="dropdown-item" href="#" >Order
+                      <li><a class="dropdown-item" href="../order/cart.html">Cart</a></li>
+                      <li><a class="dropdown-item" href="../order/checkout.html" >Checkout</a></li>
+                      <li><a class="dropdown-item" href="../order/received.html" >Received</a></li>
+                  </a></li>
                   <li><a class="dropdown-item" href="#" >Other</a></li>
                 </ul>
               </div>
